--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="flex flex-col md:flex-row gap-8 bg-white/20 rounded-3xl p-8 shadow-lg backdrop-blur-md">
       <div class="flex-1">
         <ul class="space-y-6 text-left">
-          <!-- About points -->
+          <!-- Text --> <div class="flex-1"> <ul class="space-y-6 text-left"> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">⚡</span> <span class="text-lg font-medium">Founded by experienced geotechnical engineers delivering high-quality consulting services.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🛠️</span> <span class="text-lg font-medium">Specialize in soil testing & borewell investigations for apartments, high-rise buildings, highways, railways, and government projects.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🏆</span> <span class="text-lg font-medium">Completed over 500 projects across Tamil Nadu and South India.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🔬</span> <span class="text-lg font-medium">Fully equipped Soil Mechanics Labs for on-site and lab testing.</span> </li> </ul> </div>
         </ul>
       </div>
     </div>
@@ -215,7 +215,7 @@
   <div class="w-full max-w-6xl">
     <h2 class="text-4xl font-extrabold mb-8 text-sky-700">Our Services</h2>
     <div class="grid md:grid-cols-3 gap-8">
-      <!-- Services boxes -->
+      <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Residential Construction</h3> <p class="text-lg">Custom homes, renovations, and extensions designed with precision.</p> </div> <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Commercial Projects</h3> <p class="text-lg">Offices, retail, and large-scale projects delivered on time.</p> </div> <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Project Management</h3> <p class="text-lg">End-to-end management ensuring quality and safety standards.</p> </div>
     </div>
   </div>
 </section>
