--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,10 +50,10 @@
 </header>
 
 <!-- Hero Section -->
-<section class="h-screen pt-[100px] flex items-center justify-center bg-cover bg-center relative"
+<section class="min-h-screen pt-24 md:pt-32 flex items-center justify-center bg-cover bg-center relative"
          style="background-image: url('assets/img/hero-site.jpg')">
   <div class="text-center max-w-5xl p-8 bg-white/30 rounded-3xl shadow-lg backdrop-blur-md">
-    <h1 class="text-4xl font-bold mb-4 text-gray-900">Building Dreams, One Brick at a Time</h1>
+    <h1 class="text-4xl md:text-5xl font-bold mb-4 text-gray-900">Building Dreams, One Brick at a Time</h1>
     <p class="mb-6 text-lg text-gray-800">Quality Soil Testing services for Residential, Commercial and Government projects</p>
     <a href="#contact"
        class="px-6 py-3 bg-sky-500 text-white rounded-xl hover:bg-sky-600 transition">Get a Quote</a>
@@ -62,10 +61,10 @@
 </section>
 
 <!-- Video Section -->
-<section class="h-screen pt-[100px] relative w-full flex items-center justify-center bg-gray-100">
-  <div class="relative w-4/5 h-[80vh] bg-gray-300 rounded-xl shadow-lg overflow-hidden">
+<section class="min-h-screen pt-24 md:pt-32 relative w-full flex items-center justify-center bg-gray-100">
+  <div class="relative w-11/12 md:w-4/5 h-[60vh] md:h-[80vh] bg-gray-300 rounded-xl shadow-lg overflow-hidden">
     <div id="video-overlay" class="absolute inset-0 flex items-center justify-center bg-black/30 z-10">
-      <button id="play-video" class="bg-red-600 text-white rounded-full w-24 h-24 flex items-center justify-center text-4xl shadow-lg hover:bg-red-700 transition">
+      <button id="play-video" class="bg-red-600 text-white rounded-full w-20 h-20 md:w-24 md:h-24 flex items-center justify-center text-3xl md:text-4xl shadow-lg hover:bg-red-700 transition">
         ▶
       </button>
     </div>
@@ -102,9 +101,10 @@
 </script>
 
 <!-- Soil Testing Issues & Importance -->
-<section class="h-screen pt-[100px] py-16 px-6 bg-gradient-to-br from-sky-800 via-white-700 to-sky-900 text-white rounded-xl">
+<section class="min-h-screen pt-24 md:pt-32 py-16 px-6 bg-gradient-to-br from-sky-800 via-sky-700 to-sky-900 text-white rounded-xl">
   <h2 class="text-4xl font-bold text-center mb-12">Soil Testing Issues</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 gap-6 mb-16">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 mb-16">
+    <!-- your soil testing issue cards here (unchanged) -->
     <div class="p-6 bg-white/10 backdrop-blur-md rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300 text-center">
       <span class="text-4xl mb-2 block">📍</span>
       <h4 class="font-bold mb-1">Site Access</h4>
@@ -174,7 +174,7 @@
       <span class="text-4xl mb-2 block">🏞️</span>
       <h4 class="font-bold mb-1">Land Block</h4>
       <p class="text-sm">Suitability for on-site wastewater disposal.</p>
-    </div>
+  </div>
   </div>
 
   <h3 class="text-3xl font-bold text-center mb-8">Why Soil Testing is Important?</h3>
@@ -198,7 +198,7 @@
 </section>
 
 <!-- About + Services Section -->
-<section class="h-screen pt-[100px] flex flex-col items-center justify-center px-6 text-center space-y-16 bg-gradient-to-b from-sky-200 via-white to-sky-100 py-12">
+<section class="min-h-screen pt-24 md:pt-32 flex flex-col items-center justify-center px-6 text-center space-y-16 bg-gradient-to-b from-sky-200 via-white to-sky-100 py-12">
   <!-- About Us -->
   <div class="w-full max-w-6xl">
     <h2 class="text-4xl font-extrabold mb-8 text-sky-700">About Us</h2>
@@ -221,8 +221,9 @@
 </section>
 
 <!-- Projects + Clients Section -->
-<section class="h-screen pt-[100px] flex flex-col items-center justify-center px-6 text-center space-y-12 bg-white/10 rounded-xl">
-  
+<section class="min-h-screen pt-24 md:pt-32 flex flex-col items-center justify-center px-6 text-center space-y-12 bg-white/10 rounded-xl">
+  <!-- Projects -->
+    
   <!-- Projects -->
   <div class="w-full">
     <h2 class="text-3xl font-bold mb-8">Recent Projects</h2>
@@ -274,10 +275,9 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="h-screen pt-[100px] flex flex-col items-center justify-center px-6 text-center">
+<section id="contact" class="min-h-screen pt-24 md:pt-32 flex flex-col items-center justify-center px-6 text-center">
   <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
   <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field"
-        action="geodesign123@gmail.com"
         class="max-w-lg mx-auto bg-white/20 rounded-2xl p-6 shadow space-y-4">
     <input type="hidden" name="form-name" value="contact">
     <p class="hidden">
@@ -296,7 +296,7 @@
 </section>
 
 <!-- Footer -->
-<footer class="fixed bottom-0 left-0 w-full py-4 text-center text-sm bg-white/30 backdrop-blur-md">
+<footer class="py-4 text-center text-sm bg-white/30 backdrop-blur-md">
   © 2025 Geo Design. All Rights Reserved.
 </footer>
 
