--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <!-- Header -->
 <header class="fixed top-0 left-0 w-full flex items-center justify-between px-6 py-4 bg-white/70 backdrop-blur-md shadow z-50">
   <div class="flex items-center space-x-4">
-    <img src="assets/img/logo.png" alt="Logo" class="h-20 w-40 object-contain">
+    <img src="assets/img/logo.png" alt="Logo" class="h-20 w-20 object-contain">
     <div class="flex flex-col items-start">
-        <span class="text-4xl font-extrabold text-gray-900">Geo Design</span>
+        <span class="text-2xl font-extrabold text-gray-900">Geo Design</span>
         <span class="text-sm text-gray-600 mt-1">We care for your safety & investment</span>
     </div>
   </div>
@@ -48,7 +48,8 @@
     <ul class="flex space-x-6">
       <li><a href="#video" class="hover:text-sky-500">Watch Video</a></li>
       <li><a href="#issue" class="hover:text-sky-500">Why It Matters</a></li>
-      <li><a href="#about" class="hover:text-sky-500">What We Do</a></li>
+      <li><a href="#about" class="hover:text-sky-500">Who We Are</a></li>
+      <li><a href="#services" class="hover:text-sky-500">What We Do</a></li>
       <li><a href="#projects" class="hover:text-sky-500">Who We Work With</a></li>
 
     </ul>
@@ -62,8 +63,8 @@
 <section id="hero" class="min-h-screen pt-24 md:pt-32 flex items-center justify-center bg-cover bg-center relative"
          style="background-image: url('assets/img/hero-site.jpg')">
   <div class="text-center max-w-5xl p-8 bg-white/30 rounded-3xl shadow-lg backdrop-blur-md">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4 text-gray-900">Building Dreams, One Brick at a Time</h1>
-    <p class="mb-6 text-lg text-gray-800">Quality Soil Testing services for Residential, Commercial and Government projects</p>
+    <h1 class="text-4xl md:text-4xl font-bold mb-4 text-gray-900">Building Dreams, One Brick at a Time</h1>
+    <p class="mb-4 text-lg text-gray-800">Quality Soil Testing services for Residential, Commercial and Government projects</p>
     <a href="#contact"
        class="px-6 py-3 bg-sky-500 text-white rounded-xl hover:bg-sky-600 transition">Get a Quote</a>
   </div>
@@ -111,7 +112,7 @@
 
 <!-- Soil Testing Issues & Importance -->
 <section id="issue" class="min-h-screen pt-24 md:pt-32 py-16 px-6 bg-gradient-to-br from-sky-800 via-sky-700 to-sky-900 text-white rounded-xl">
-  <h2 class="text-4xl font-bold text-center mb-12">Soil Testing Issues</h2>
+  <h2 class="text-4xl font-bold text-center mb-12">Why Soil Testing Matters?</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 mb-16">
     <!-- your soil testing issue cards here (unchanged) -->
     <div class="p-6 bg-white/10 backdrop-blur-md rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300 text-center">
@@ -206,27 +207,98 @@
   </div>
 </section>
 
-<!-- About + Services Section -->
-<section id="about" class="min-h-screen pt-24 md:pt-32 flex flex-col items-center justify-center px-6 text-center space-y-16 bg-gradient-to-b from-sky-200 via-white to-sky-100 py-12">
-  <!-- About Us -->
-  <div class="w-full max-w-6xl">
-    <h2 class="text-4xl font-extrabold mb-8 text-sky-700">About Us</h2>
-    <div class="flex flex-col md:flex-row gap-8 bg-white/20 rounded-3xl p-8 shadow-lg backdrop-blur-md">
-      <div class="flex-1">
-        <ul class="space-y-6 text-left">
-          <!-- Text --> <div class="flex-1"> <ul class="space-y-6 text-left"> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">⚡</span> <span class="text-lg font-medium">Founded by experienced geotechnical engineers delivering high-quality consulting services.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🛠️</span> <span class="text-lg font-medium">Specialize in soil testing & borewell investigations for apartments, high-rise buildings, highways, railways, and government projects.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🏆</span> <span class="text-lg font-medium">Completed over 500 projects across Tamil Nadu and South India.</span> </li> <li class="flex items-start space-x-4"> <span class="text-sky-500 text-2xl mt-1">🔬</span> <span class="text-lg font-medium">Fully equipped Soil Mechanics Labs for on-site and lab testing.</span> </li> </ul> </div>
+
+<!-- About Section -->
+<section id="about"  class="py-20 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-6 space-y-20">
+
+    <!-- About Us -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+
+      <!-- Right: Text -->
+      <div>
+        <h2 class="text-3xl font-bold text-gray-800 mb-4">About Us</h2>
+         <ul class="space-y-4 text-gray-600 leading-relaxed">
+          <li>✔️ Our company was established by Geotechnical Engineers. The main objective of our company is Geo Technical consulting services for civil works. </li>
+          <li>✔️ We mainly take the soil test for bore-hole works in residential buildings, apartments, high rise buildings, commercial buildings, bridges and all civil works.</li>
+          <li>✔️ We have completed more than 5000 sites all over Tamilnadu & South India. We have well equipped Soil mechanics Laboratory at Coimbatore and Chennai.</li>
+          <li>✔️ We carry out tests on Soil and Rock Samples in field and laboratory. We have sufficient Geotechnical Engineers and labours to do work. We have 5 Geotechnical Engineers and 20 Civil Engineers working with us.</li>
+
         </ul>
       </div>
+            <!-- Left: Image -->
+      <div>
+        <img src="assets/img/engineers_at_work .jpeg" alt="About Us" class="rounded-2xl shadow-lg">
+      </div>
     </div>
+
+    <!-- Vision -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+      <!-- Left: Text -->
+      <div class="md:order-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-4">Our Vision</h2>
+        <p class="text-gray-600 leading-relaxed">
+          Our vision is to grow our Geotechnical team in order to offer a broad spectrum of specialist Engineering, Consulting services to become our Clients' preferred Professional Service Provider through excellence and efficiency in all aspects of the project. Whether it is a building project, or any other civil engineering project, that will exceed expectations and set new standards.
+        </p>
+      </div>
+      <!-- Right: Image -->
+      <div class="md:order-1">
+        <img src="assets/img/mission2.jpg" alt="Vision" class="rounded-2xl shadow-lg">
+      </div>
+    </div>
+
+    <!-- Mission -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+      <!-- Left: Image -->
+
+      <!-- Right: Text -->
+      <div>
+        <h2 class="text-3xl font-bold text-gray-800 mb-4">Our Mission</h2>
+        <p class="text-gray-600 leading-relaxed">
+         Offer excellent service in each of our professional disciplines, in accordance with statutory practices, codes of conduct and integrity, thereby developing our team and providing a leading platform from which to service the construction and in particular, our valued Clients.
+        </p>
+      </div>
+
+            <div>
+        <img src="assets/img/mission3.jpg" alt="Mission" class="rounded-2xl shadow-lg">
+      </div>
+    </div>
+
   </div>
-  
-  <!-- Services -->
+</section>
+
+    <!-- Services -->
+  <section id="services" class="min-h-screen pt-24 md:pt-32 flex flex-col items-center justify-center px-6 text-center space-y-16 bg-gradient-to-b from-sky-200 via-white to-sky-100 py-12">
   <div class="w-full max-w-6xl">
     <h2 class="text-4xl font-extrabold mb-8 text-sky-700">Our Services</h2>
     <div class="grid md:grid-cols-3 gap-8">
-      <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Residential Construction</h3> <p class="text-lg">Custom homes, renovations, and extensions designed with precision.</p> </div> <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Commercial Projects</h3> <p class="text-lg">Offices, retail, and large-scale projects delivered on time.</p> </div> <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> <h3 class="text-2xl font-bold mb-3">Project Management</h3> <p class="text-lg">End-to-end management ensuring quality and safety standards.</p> </div>
-    </div>
+      <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+        <h3 class="text-2xl font-bold mb-3">Soil Testing for All Types of Constructions</h3> 
+        <p class="text-lg">Comprehensive soil investigation to determine bearing capacity, settlement behavior, and suitability for buildings, roads, and industrial projects.</p> </div> 
+        <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+        <h3 class="text-2xl font-bold mb-3">Laboratory Soil Testing</h3> 
+        <p class="text-lg">State-of-the-art soil mechanics laboratory for analyzing strength, composition, and moisture properties that influence design and performance.</p> </div> 
+        <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+          <h3 class="text-2xl font-bold mb-3">Pile Foundation & Foundation Design</h3> 
+          <p class="text-lg">Expert design and execution of deep foundations to support high-rise buildings, bridges, and heavy structures.</p> </div>
+
+      <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+          <h3 class="text-2xl font-bold mb-3">Plate Load Test</h3> 
+          <p class="text-lg">On-site testing to evaluate soil bearing capacity and settlement characteristics for shallow foundations.</p> </div>
+
+          <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+          <h3 class="text-2xl font-bold mb-3">Pile Load Test / Pull Out Test</h3> 
+          <p class="text-lg">Critical testing to validate the load-carrying capacity and stability of piles, ensuring reliability in foundation systems.</p> </div>
+
+          <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+          <h3 class="text-2xl font-bold mb-3">Electrical Resistivity Test</h3> 
+          <p class="text-lg">Subsurface investigation to map soil stratification, groundwater, and rock layers using resistivity methods for better foundation planning.</p> </div>
+
+          <div class="p-8 bg-gradient-to-br from-white/30 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300"> 
+          <h3 class="text-2xl font-bold mb-3">Topographical & Contour Survey</h3> 
+          <p class="text-lg">Precise land surveys to capture terrain features and elevation data, supporting site planning, drainage design, and infrastructure projects.</p> </div>
   </div>
+
 </section>
 
 <!-- Projects + Clients Section -->
