--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Geo Design - Soil Testing Experts</title>
+  <title>GeoDesign - Expert Soil Testing Services in India</title>
   <meta name="description"
-    content="Geo Design provides reliable soil testing services for residential, commercial, and government projects. Serving Tamil Nadu & South India with 5000+ completed projects.">
+    content="GeoDesign provides reliable soil testing services for residential, commercial, and government projects in Tamil Nadu. Contact us today!">
   <meta name="keywords"
     content="soil testing, geotechnical services, borehole test, soil mechanics, Coimbatore, Chennai, Geo Design">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,6 +65,8 @@
 
 </head>
 
+
+
 <body class="font-sans">
 
   <!-- Header -->
@@ -72,10 +74,11 @@
     <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
       <!-- Logo -->
       <div class="flex items-center space-x-3">
-        <!--  <img src="assets/img/logo.png" alt="Logo" class="h-12 w-12 object-contain"-->
+        <img src="assets/web/logo.png" alt="GeoDesign Logo" class="h-20 w-20 object-contain">
+
         <div class="flex flex-col">
-          <span class="text-xl font-extrabold text-gray-900">
-            Geo Design India Private Limited
+          <span class="text-xl font-extrabold">
+            Geo Design
           </span>
           <span class="text-xs text-gray-600">
             We care for your Safety & Investment
@@ -118,6 +121,7 @@
       menu.classList.toggle("hidden");
     });
   </script>
+
 
   <!-- Hero Section -->
   <section id="hero" class="min-h-screen flex items-center justify-center pt-32 bg-cover bg-center relative"
@@ -269,9 +273,9 @@
       </div>
       <div
         class="p-8 bg-gradient-to-br from-white/20 to-white/10 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300 text-center">
-        <span class="text-5xl text-sky-400 mb-4 block">🔬</span>
-        <h4 class="text-2xl font-bold mb-3">Residential Soil Testing</h4>
-        <p class="text-lg">Soil samples are collected and analyzed for safe construction.</p>
+        <span class="text-5xl text-sky-400 mb-4 block">🌍 </span>
+        <h4 class="text-2xl font-bold mb-3">Build on Solid Ground</h4>
+        <p class="text-lg">Ensure safety and stability with accurate soil analysis for foundations that last a lifetime.</p>
       </div>
     </div>
   </section>
@@ -290,6 +294,7 @@
           <ul class="space-y-4 text-gray-600 leading-relaxed">
             <li>✔️ Founded by experienced Geotechnical Engineers, our company specializes in providing expert
               geotechnical consulting services for civil engineering projects. </li>
+            <li>✔️ Registered Geotechical engineers in DTCP and CMDA.</li>
             <li>✔️ We conduct comprehensive soil testing for bore-hole investigations across a wide range of
               constructions, including residential buildings, apartments, high-rises, commercial complexes, and bridges.
             </li>
@@ -298,6 +303,7 @@
             <li>✔️ We perform thorough testing of soil and rock samples both on-site and in the laboratory, supported by
               a skilled team of 5 Geotechnical Engineers and 20 Civil Engineers, ensuring reliable and efficient project
               execution.</li>
+
           </ul>
         </div>
 
@@ -337,15 +343,15 @@
           </p>
         </div>
       </div>
-
     </div>
   </section>
-
 
   <!-- Services -->
   <section id="services" class="py-20 px-4 sm:px-6 lg:px-8 bg-gradient-to-b from-sky-200 via-white to-sky-100">
     <div class="max-w-7xl mx-auto text-center">
       <h2 class="text-3xl sm:text-4xl font-extrabold text-sky-700 mb-12">Our Services</h2>
+      <p class="text-lg text-gray-600 mb-14">Delivering reliable soil testing & foundation solutions to build with
+        confidence</p>
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
 
         <div
@@ -718,7 +724,7 @@
 
       <!-- Contact / Address -->
       <div>
-        <h3 class="text-lg  mb-4">Contact Us</h3>
+        <h3 class="text-lg font-bold mb-4">Contact Us</h3>
         <p>📍 Head Office: Old No. 40, New No. 29, 8th Street, K.K.Pudur, Coimbatore - 641038</p>
         <p>📍 Branch Office: No. 15, Periyar Pathai, Choolaimedu, Chennai - 600094</p>
         <p>📞 0422 - 4202452 | 📱 +91 9043344488</p>
@@ -743,14 +749,16 @@
       <div>
         <h3 class="text-lg font-bold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
-          <a href="#" target="_blank" class="hover:text-sky-600">🌐 Website</a>
+
+          <a href="https://www.justdial.com/Chennai/Geo-Design-INDIA-Pvt-Ltd-Opposite-to-Fish-Market-Bharatheswarar-Colony-Choolaimedu/044PXX44-XX44-121011105112-B1R2_BZDET" target="_blank" class="hover:text-sky-600">📞 Justdial</a>
+          <a href="https://www.google.com/search?client=safari&rls=en&q=geodesign.+coimbatore&ie=UTF-8&oe=UTF-8" target="_blank" class="hover:text-sky-600">⭐
+            Google</a>
           <a href="#" target="_blank" class="hover:text-sky-600">📘 Facebook</a>
           <a href="#" target="_blank" class="hover:text-sky-600">🐦 Twitter</a>
           <a href="#" target="_blank" class="hover:text-sky-600">🔗 LinkedIn</a>
           <a href="#" target="_blank" class="hover:text-sky-600">📸 Instagram</a>
         </div>
       </div>
-
     </div>
 
     <!-- Bottom Text -->
